--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -6,8 +6,7 @@ name: CI to Docker Hub
 on:
   # Triggers the workflow on pushing tags
   push:
-    tags: 
-      - "v*.*.*"
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,6 +21,10 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v2
 
+      - name: Settup docker buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -31,15 +34,13 @@ jobs:
             ${{runner.os}}-buildx-
 
       # Login to docker hub
-      - name: Login to Docker Hub
+      - name: Login to Gitlab registry
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.DOCKER_HUB_USERNAME}}
-          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
-          
-      - name: Settup docker buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
         
       - name: Build and push
         id: docker_build
@@ -49,7 +50,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{steps.buildx.outputs.name}}
           push: true
-          tags: ${{secrets.DOCKER_HUB_USERNAME}}/simplewhale:${{env.RELEASE_VERSION}}
+          tags: ${{github.repository_owner}}/simplewhale:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           
