--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI to Docker Hub
+name: CI to Gitlab Container Registry
 
 # Controls when the workflow will run
 on:
@@ -40,7 +40,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Build and push
         id: docker_build
