--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -50,7 +50,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{steps.buildx.outputs.name}}
           push: true
-          tags: ${{github.repository_owner}}/simplewhale:latest
+          tags: ghcr.io/${{github.repository_owner}}/simplewhale:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           
