--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -21,9 +21,6 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v2
 
-      - name: Read Docker Image Identifiers
-        run: echo ::set-env name=IMAGE_REPOSITORY::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
-
       - name: Settup docker buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
@@ -53,7 +50,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{steps.buildx.outputs.name}}
           push: true
-          tags: ghcr.io/${{env.IMAGE_REPOSITORY}}/simplewhale:latest
+          tags: ghcr.io/reddyprashanth/simplewhale:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           
